# edoras

./: .gitignore  Cargo.toml  README.md
crates/edoras-core/: Cargo.toml
crates/edoras-core/src/: lib.rs
crates/edoras-server/: Cargo.toml
crates/edoras-server/src/: application.rs  main.rs  server.rs
crates/edoras_client/: Cargo.toml
crates/edoras_client/src/: application.rs  main.rs
crates/edoras_core/: Cargo.toml
crates/edoras_core/src/: errors.rs  lib.rs  message.rs
crates/edoras_server/: Cargo.toml
crates/edoras_server/src/: application.rs  main.rs  server.rs  session.rs  user.rs
crates/edoras_server/src/handlers/: auth.rs  mod.rs
crates/hello/: Cargo.toml
