[package]
name = "edoras-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
tracing = "0.1.*"
tracing-subscriber = "0.3.*"
uuid = { version = "1.10.*", features = ["v4"] }

[dependencies.async-std]
workspace = true

[dependencies.edoras_core]
workspace = true
